gh-pages: fix logo alignment on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,3 +71,16 @@ a {
     color: inherit;
   }
 }
+
+@media screen and (max-width: 42em) {
+  .page-header {
+    .project-name {
+      &:before {
+        background-size: 50px;
+        width: 50px;
+        height: 50px;
+        vertical-align: middle;
+      }
+    }
+  }
+}
